[project]
name = "visionai-scenarios"
version = "0.0.3"
description = "List publicly available scenarios"
authors = [
    {name = "Harsh Murari", email="hmurari@visionify.ai"},
    {email = "info@visionify.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

keywords = ["vision", "visionai", "inference", "computer vision", "ehs", "workplace safety", "hazard warning", "prebuilt models"]

classifiers = [
    "Topic :: Software Development :: Python",
    "Topic :: Software Development :: Computer Vision",
]

[project.urls]
homepage = "https://github.com/visionify/visionai-scenarios"
documentation = "https://docs.visionify.com"
repository = "https://github.com/visionify/visionai-scenarios"

